Try to avoid horizontal scroll bars in autocomplete panels

--- a/cocktail/html/resources/styles/Autocomplete.css
+++ b/cocktail/html/resources/styles/Autocomplete.css
@@ -46,6 +46,7 @@
 
 .Autocomplete [data-autocomplete-entry] {
     padding: 0.5em;
+    padding-right: 3em;
     cursor: pointer;
 }
 
